devhub-tools/main/default/objects/DocGen_Community_Vote__c/DocGen_Community_Vote__c.object-meta.xml
<CustomObject>
    <description>Upvote on a community post or reply. One vote per member per item.</description>
    <label>Community Vote</label>
    <nameField>
        <displayFormat>VOTE-{00000}</displayFormat>
        <label>Vote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Votes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>