devhub-tools/main/default/objects/DocGen_Community_Vote__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post</label>
    <referenceTo>DocGen_Community_Post__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>