devhub-tools/main/default/objects/DocGen_Community_Vote__c/fields/Reply__c.field-meta.xml
<CustomField>
    <fullName>Reply__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reply</label>
    <referenceTo>DocGen_Community_Reply__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>