devhub-tools/main/default/objects/DocGen_Community_Vote__c/fields/Voter__c.field-meta.xml
<CustomField>
    <fullName>Voter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Community_Votes</relationshipName>
    <type>Lookup</type>
</CustomField>